crates/pixi-build-cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script@unix-nopython.snap
---
source: crates/pixi-build-cmake/src/build_script.rs
expression: "script.join(\"\\n\")"
snapshot_kind: text
---
ninja --version
cmake --version

mkdir -p build
pushd build

if [ ! -f "build.ninja" ]; then
    cmake $CMAKE_ARGS \
        -GNinja \
        -S "$SRC_DIR" \
        -DCMAKE_BUILD_TYPE=Release \
        -DCMAKE_INSTALL_PREFIX=$PREFIX \
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
        -DBUILD_SHARED_LIBS=ON
fi

cmake --build . --target install
